@@ -1,6 +1,8 @@
 -Xmx8g
 -Dappinspection.use.dev.jar=true
 -Dlayout.inspector.rel.jar.location=#studio/../../../../../../out/dist/inspection
+# b/279181712
+-Djdk.attach.allowAttachSelf=true
 # https://github.com/google/google-java-format#intellij-jre-config
 --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
 --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
